--- a/demos/facial_analysis.html
+++ b/demos/facial_analysis.html
@@ -78,7 +78,7 @@
           </div>
           <script>
           function getStarted(){
-            self.location.href="https://heedojung92.github.io/MZProject/demos/facial_analysis#slide=3"
+            self.location.href= location.href.replace('#slide=2','#slide=3');
           }
           </script>
 
@@ -121,7 +121,7 @@
               }else{
                 document.getElementById("q2_text").innerHTML = "모공이 눈으로 잘 보이는 크기에요";
               }
-              self.location.href="https://heedojung92.github.io/MZProject/demos/facial_analysis#slide=5";
+              self.location.href=location.href.replace('#slide=4','#slide=5');
 
             }
           </script>
@@ -155,7 +155,7 @@
                   document.getElementById("q3_text").innerHTML = "얼굴 전반에 피지가 많고 번들거려요";
                 }
               }
-              self.location.href="https://heedojung92.github.io/MZProject/demos/facial_analysis#slide=6";
+              self.location.href=location.href.replace('#slide=5','#slide=6');
 
             }
           </script>
