--- a/demos/facial_analysis.html
+++ b/demos/facial_analysis.html
@@ -71,8 +71,7 @@
               <ul class="flexblock">
                 <li> 이름 <input type="text" tabindex="1" id="name" placeholder="이름을 입력해주세요" required></li>
                 <li> 전화번호<input type="tel" tabindex="2" name="tel1" placeholder="01099999999" required></li>
-                <li> 생년월일<input type="date" tabindex="2" placeholder="010" required></li>
-                <li><button type="button" class="radius" tabindex="3" title="Sign Up" onclick="getStarted()">분석 시작하기 &rsaquo;</button></li>
+                <li><button type="button" class="button ghost" tabindex="3" title="Sign Up" onclick="getStarted()">분석 시작하기 &rsaquo;</button></li>
               </ul>
             </form>
           </div>
