--- a/demos/facial_analysis.html
+++ b/demos/facial_analysis.html
@@ -64,7 +64,7 @@
         <section class="bg-black">
           <span class="background" style="background-image:url('https://source.unsplash.com/p3UCTiZIU6M/')"></span>
           <!--.wrap = container (width: 90%) -->
-          <div class="wrap size-70 aligncenter">
+          <div class="wrap size-60 aligncenter">
             <h2> 나의 피부 타입과 상태는? </h2>
             <p class="text-intro"> 몇가지 질문과 현재 피부사진으로 분석을 받을 수 있습니다.</p>
             <form action="/" method="post" class="bg-trans-dark">
@@ -83,7 +83,7 @@
 
         </section>
         <section>
-          <div class="wrap size-50">
+          <div class="wrap size-40">
           <script>
           function fun(e){
             if (!('url' in window) && ('webkitURL' in window)) {
@@ -93,7 +93,8 @@
             document.getElementById("pic2").src=imgUrl;
           }
         </script>
-        <p><strong> 현재 피부상태를 사진찍어 더욱 정확한 분석을 받아보세요. </strong></p>
+        <h3 class="text-landing"><b>현재 피부상태 분석</b></h3>
+        <p > 사진촬영을 통해 더욱 정확한 분석을 받아보세요.</p>
         <pre>
         <figure>
           <img id="pic2" style=" 30% 30% no-repeat;background-size: cover">
