--- a/demos/facial_analysis.html
+++ b/demos/facial_analysis.html
@@ -76,7 +76,9 @@
             </form>
           </div>
           <script>
+          var name;
           function getStarted(){
+            name=document.getElementById("name").value;
             self.location.href= location.href.replace('#slide=2','#slide=3');
           }
           </script>
@@ -170,15 +172,72 @@
           <div class="wrap size-50">
 
             <h4 class="text-landing">Q3</h4>
-            <p class="text-intro"><br><strong id="q3_text">세안 후 5분 이내에 피부가 땡겨요. </strong><br>
+            <p class="text-intro"><br><strong id="q3_text">화장품을 바를 때 건조할까봐 많은 양을 발라요 </strong><br>
             </p>
              <nav class="aligncenter">
                <ul>
-                 <li><a href="#slide=5" target="_self"><strong> 예 &nbsp; &rsaquo; </strong></a></li>
-                 <li><a href="#slide=6" target="_self"><strong>아니오 &nbsp; &rsaquo;</strong></a></li>
+                 <li><a onclick="getRes(this)" target="_self"><strong> 예 &nbsp; &rsaquo; </strong></a></li>
+                 <li><a onclick="getRes(this)" target="_self"><strong>아니오 &nbsp; &rsaquo;</strong></a></li>
                </ul>
              </nav>
           </div>
+          <script>
+            var skinType="";
+            var typeNo=1;
+              function getRes(e){
+                if(document.getElementById("q3_text").innerHTML.includes('화장품')){
+                  if(e.text.includes('예')){
+                    skinType="건성 피부타입";
+                    typeNo=1;
+                  }else{
+                    skinType="중성 피부타입";
+                    typeNo=2;
+                  }
+                }else if(document.getElementById("q3_text").innerHTML.includes('좁쌀')){
+                  if(e.text.includes('예')){
+                    skinType="지성 피부타입";
+                    typeNo=3;
+                  }else{
+                    skinType="중성 피부타입";
+                    typeNo=2;
+                  }
+                }else{
+                  if(e.text.includes('예')){
+                    skinType="지성 피부타입";
+                    typeNo=3;
+                  }else{
+                    skinType="복합성 피부타입";
+                    typeNo=4;
+                  }
+                }
+                document.getElementById("skinRes").innerHTML=skinType;
+                document.getElementById("resName").innerHTML=name;
+                if(typeNo==1){
+                  document.getElementById("desc").innerHTML=name+ " 님은 타고난 유분량이 부족하여 쉽게 건조함을 느끼는 건성 피부입니다. 피부가 스스로 만들어내는 유분, 피지의 양과 유분 보호막이 부족한 건성 피부 타입은 수분 증발을 막기 어려워서 수분까지 같이 부족해지기 쉽습니다. 그렇게 되면 피부 장벽이 약해지기에 건성이면서 민감성인 피부가 많아요. 이 피부 타입은 가을, 겨울, 봄(특히 자는 사이 수분이 증발하는 밤)에 보습에 신경을 써야 합니다. 장벽 강화를 돕는 세럼이나 크림, 밤 등으로 매일 피부 겉 보습막을 단단히 형성해주는 것은 건성 피부에게 색소나 주름 고민을 자연스럽게 예방해주는 습관입니다. ";
+                }else if(typeNo==2){
+                  document.getElementById("desc").innerHTML=name+" 님은 적절한 유분량을 가진 중성 피부입니다. 아마도 평생 피부과에 갈 일 없이 집에서 기본만 잘 지키며 관리해도 좋은 피부 상태를 유지할 수 있는 건강한 피부 타입인데요. (참, 지성 피부가 나이가 들면서 피지분비량이 줄어들어 중성 피부로 수렴하는 경우도 있어요.) 중성 피부 타입은 홈케어를 통해 본인에게 적절한 유수분 밸런스를 유지하면서 선크림을 잘 발라서 노화의 원인을 제공할 수 있는 자외선으로부터 스스로를 잘 지키기만 해도 충분합니다." +
+                   "이따금씩 각질이 너무 쌓이면 각질 정돈 토너를 바르고, 휴가 이후 색소가 올라오면 비타민 미백 앰플을 바르는 등의 관리를 한다면 피부가 더 없이 건강한 광채로 보답할 거예요!";
+                }else if (typeNo==3) {
+                  document.getElementById("desc").innerHTML=name + " 님은 타고난 유분량이 충분한 지성 피부입니다. 피부가 스스로 만들어내는 유분, 피지의 양이 선천적으로 많은 지성 피부 타입은 이 약산성 유분 보호막 덕분에 수분 부족 증상이 어느 정도 예방되어 건성 피부보다 건강한 피부 상태를 유지하기 쉽습니다. 하지만 냉난방, 물을 적게 마시는 등 생활습관 때문에 수분이 증발되어 속건조를 느끼는 수분 부족형 지성 타입이 될 수 있어요." +
+                        "수분이 부족해지면 우리 피부가 이를 보완하기 위해 안 좋은 피지를 만들어낼 수 있으니 평소 습관과 수분 공급에 신경 써야 해요. 또 많은 피지량과 함께 각질이 모공 입구를 잘 막는 경향을 타고난 경우, 트러블로 이어지기 쉬우니 토너로 피지와 각질을 잘 관리하고 화장품으로 적절한 유수분 밸런스를 맞춰주도록 선택하고, 유분이 많은 제품(크림, 밤, 오일 등)의 사용량에 주의해야 합니다. 자신에게 편안한 주기로 피지와 각질을 정돈해주는 것은 지성 피부가 피부 고민을 예방하도록 도와주는 습관입니다."
+                }else{
+                  document.getElementById("desc").innerHTML=name + " 님은 피부 부위별 유분량이 다르게 타고난 복합성 피부입니다. 다른 피부 타입에 비해 부위별 홈케어를 다르게 해야 해서 신경 쓸 부분이 많을지 모르지만 잘만 관리하면 건성과 지성 피부의 장점을 가진 피부 타입입니다. 보통 복합성 피부는 T존(이마, 코 부위)은 지성 피부에 가깝고 U존(볼, 턱 부위)은 건성 혹은 중성에 가까운 피부를 갖고 있으며 각 부위에 맞는 유수분 밸런스를 잡아주는 것이 건강한 홈케어의 핵심입니다."
+                  + "이를테면 크림을 T존에는 적게 바르고, U존에는 더 많이 바를 수 있고, 피지가 많은 T존에는 각질과 피지 정돈을 도와주는 토너를 바르고 U존에는 바르지 않는 등의 부위별 관리가 도움이 될 거예요.";
+                }
+
+                self.location.href=location.href.replace('#slide=6','#slide=7');
+              };
+
+          </script>
+        </section>
+        <section class="bg-white">
+          <!--.wrap.longform (width:72rem=720px) = Better reading experience (90-95 characters per line) -->
+          <div class="wrap longform">
+            <span><strong id="resName"> </strong> 님은 <span id="skinRes"> </span> 입니다.
+          </span><br><br>
+          <p id="desc"></p>
+          </div>
+
         </section>
 
 
