--- a/demos/facial_analysis.html
+++ b/demos/facial_analysis.html
@@ -218,6 +218,7 @@
                   document.getElementById("desc").innerHTML=name+" 님은 적절한 유분량을 가진 중성 피부입니다. 아마도 평생 피부과에 갈 일 없이 집에서 기본만 잘 지키며 관리해도 좋은 피부 상태를 유지할 수 있는 건강한 피부 타입인데요. 중성 피부 타입은 홈케어를 통해 본인에게 적절한 유수분 밸런스를 유지하면서 선크림을 잘 발라서 노화의 원인을 제공할 수 있는 자외선으로부터 스스로를 잘 지키기만 해도 충분합니다." +
                 }else if (typeNo==3) {
                   document.getElementById("desc").innerHTML=name + " 님은 타고난 유분량이 충분한 지성 피부입니다. 피부가 스스로 만들어내는 유분, 피지의 양이 선천적으로 많은 지성 피부 타입은 이 약산성 유분 보호막 덕분에 수분 부족 증상이 어느 정도 예방되어 건성 피부보다 건강한 피부 상태를 유지하기 쉽습니다.";
+                }else{
                   document.getElementById("desc").innerHTML=name + " 님은 피부 부위별 유분량이 다르게 타고난 복합성 피부입니다.  보통 복합성 피부는 T존(이마, 코 부위)은 지성 피부에 가깝고 U존(볼, 턱 부위)은 건성 혹은 중성에 가까운 피부를 갖고 있으며 각 부위에 맞는 유수분 밸런스를 잡아주는 것이 건강한 홈케어의 핵심입니다."
                 }
 
