--- a/demos/facial_analysis.html
+++ b/demos/facial_analysis.html
@@ -86,7 +86,21 @@
         </section>
         <section>
           <div class="wrap size-40">
+            <style>
+            #camera{
+              display: none;
+            }
+            .input-file-button{
+              padding: 6px 25px;
+              background-color:#FF6600;
+              border-radius: 4px;
+              color: white;
+              cursor: pointer;
+            }
+            </style>
+
           <script>
+          document.getElementById("camera").style.display = "none";
           function fun(e){
             if (!('url' in window) && ('webkitURL' in window)) {
               window.URL = window.webkitURL;
@@ -101,6 +115,7 @@
         <figure>
           <img id="pic2" style=" 30% 30% no-repeat;background-size: cover">
         </figure>
+          <label className="input-file-button" for="camera">사진 촬영</label>
           <input type="file" id="camera" name="camera" capture="camera" accept="image/*" onchange="fun(this)"/> <br />
         </pre>
         </div>
