--- a/demos/facial_analysis.html
+++ b/demos/facial_analysis.html
@@ -97,20 +97,26 @@
               color: white;
               cursor: pointer;
             }
+            #beginQue{
+              visibility: hidden;
+            }
             </style>
 
           <script>
-          document.getElementById("camera").style.display = "none";
+
           function fun(e){
             if (!('url' in window) && ('webkitURL' in window)) {
               window.URL = window.webkitURL;
             }
             var imgUrl=URL.createObjectURL(e.files[0]);
             document.getElementById("pic2").src=imgUrl;
+            document.getElementById("beginQue").style.visibility='visible';
           }
         </script>
         <h3 class="text-landing"><b>현재 피부상태 분석</b></h3>
         <p > 사진촬영을 통해 더욱 정확한 분석을 받아보세요.</p>
+        <button id="beginQue" type="button" class="button ghost"  title="Sign Up" >다음으로 &rsaquo;</button>
+        <br>
         <pre>
         <figure>
           <img id="pic2" style=" 30% 30% no-repeat;background-size: cover">
