--- a/demos/facial_analysis.html
+++ b/demos/facial_analysis.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>바른 얼굴보장 분석 서비스</title>
+    <title>바른 얼굴보장 서비스</title>
     <meta name="description" content="MZ Project - NJLP">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,700,700i%7CMaitree:200,300,400,600,700&amp;subset=latin-ext" rel="stylesheet">
 
@@ -271,8 +271,8 @@
 
             </p>
 
-               
-                
+
+
 
 
           </div>
