--- a/demos/facial_analysis_.html
+++ b/demos/facial_analysis_.html
@@ -48,6 +48,7 @@
     <header role="banner">
     </header>
     <main role="main">
+
       <article id="webslides">
 
 
@@ -78,6 +79,7 @@
           <script>
           var name;
           function getStarted(){
+            WebSlides.registerPlugin('scroll',function(){});
             name=document.getElementById("name").value;
             self.location.href= location.href.replace('#slide=2','#slide=3');
           }
@@ -174,6 +176,7 @@
                   document.getElementById("q3_text").innerHTML = "얼굴 전반에 피지가 많고 번들거려요";
                 }
               }
+
               self.location.href=location.href.replace('#slide=5','#slide=6');
 
             }
@@ -182,7 +185,7 @@
 
         <section class="aligncenter" id="q3">
           <!--.wrap = container (width: 90%)  slide:4 -->
-          <div class="wrap size-50">
+          <div class="wrap size-50" id="q3_div">
 
             <h4 class="text-landing">Q3</h4>
             <p class="text-intro"><br><strong id="q3_text">화장품을 바를 때 건조할까봐 많은 양을 발라요 </strong><br>
@@ -241,12 +244,16 @@
                 document.getElementById("mypageWelcome").innerHTML = skinType +"인 "+ name + "님을 위한 추천 컨텐츠";
                 document.getElementById("cosmeticsRec").innerHTML = skinType;
                 document.getElementById("hospRec").innerHTML = name;
+                document.getElementById("q3_div").style.backgroundImage = "url(loading.gif)";
 
-                self.location.href=location.href.replace('#slide=6','#slide=7');
+
+                //self.location.href=location.href.replace('#slide=6','#slide=7');
               };
 
           </script>
         </section>
+
+
         <section class="bg-white">
           <!--.wrap.longform (width:72rem=720px) = Better reading experience (90-95 characters per line) -->
           <div class="wrap longform">
@@ -290,7 +297,6 @@
 
     <!-- Required -->
     <script src="../static/js/webslides.js"></script>
-
     <script>
       window.ws = new WebSlides();
     </script>
