--- a/demos/facial_analysis_.html
+++ b/demos/facial_analysis_.html
@@ -80,6 +80,7 @@
           var name;
           function getStarted(){
             WebSlides.registerPlugin('scroll',function(){});
+            WebSlides.registerPlugin('slide',function(){});
             name=document.getElementById("name").value;
             self.location.href= location.href.replace('#slide=2','#slide=3');
           }
