--- a/demos/facial_analysis.html
+++ b/demos/facial_analysis.html
@@ -76,7 +76,7 @@
             </form>
           </div>
           <script>
-          var name;
+          var name="홍길동";
           function getStarted(){
             name=document.getElementById("name").value;
             self.location.href= location.href.replace('#slide=2','#slide=3');
@@ -195,7 +195,7 @@
              </nav>
           </div>
           <script>
-            var skinType="";
+            var skinType="건성 피부타입";
             var typeNo=1;
               function getRes(e){
                 if(document.getElementById("q3_text").innerHTML.includes('화장품')){
