--- a/demos/facial_analysis_.html
+++ b/demos/facial_analysis_.html
@@ -83,7 +83,7 @@
 
 
             name=document.getElementById("name").value;
-            //self.location.href= location.href.replace('#slide=2','#slide=3');
+            self.location.href= location.href.replace('#slide=2','#slide=3');
 
           }
           </script>
