--- a/demos/facial_analysis.html
+++ b/demos/facial_analysis.html
@@ -51,7 +51,7 @@
       <article id="webslides">
 
 
-        <section class="bg-purple aligncenter">
+        <section class="bg-blue aligncenter">
          <span class="background dark" style="background-image:url('https://source.unsplash.com/C1HhAQrbykQ/')"></span>
           <!--.wrap = container (width: 90%) -->
           <div class="wrap">
